kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: foostestbot
  labels:
    name: foostestbot
