kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foostestbot
  labels:
    app: foostestbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foostestbot
  template:
    metadata:
      labels:
        app: foostestbot
    spec:
      containers:
        - name: foostestbot
          image: nkuznetsov44/foostestbot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foostestbot-mariadb
  labels:
    app: foostestbot-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foostestbot-mariadb
  template:
    metadata:
      labels:
        app: foostestbot-mariadb
    spec:
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: foostestbot-mariadb-data
        - name: mariadb-initdb
          configMap:
            name: foostestbot-config
            items:
              - key: mariadb.schema.sql
                path: schema.sql
      containers:
        - name: foostestbot-mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-data
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: mariadb-initdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foostestbot-redis
  labels:
    app: foostestbot-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foostestbot-redis
  template:
    metadata:
      labels:
        app: foostestbot-redis
    spec:
      volumes:
        - name: redis-config
          configMap:
            name: foostestbot-config
            items:
              - key: redis.conf
                path: redis.conf
      containers:
        - name: foostestbot-redis
          image: redis:latest
          command:
            - redis-server
            - "/usr/local/etc/redis/redis.conf"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /usr/local/etc/redis/redis.conf
              name: redis-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foostestbot-phpmyadmin
  labels:
    app: foostestbot-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foostestbot-phpmyadmin
  template:
    metadata:
      labels:
        app: foostestbot-phpmyadmin
    spec:
      containers:
        - name: foostestbot-phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foostestbot-results
  labels:
    app: foostestbot-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foostestbot-results
  template:
    metadata:
      labels:
        app: foostestbot-results
    spec:
      containers:
        - name: foostestbot-results-frontend
          image: nkuznetsov44/foostestbot-results-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
        - name: foostestbot-results-app
          image: nkuznetsov44/foostest-results-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
