kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: foostestbot
spec:
  selector:
    app: foostestbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: foostest-results-frontend
spec:
  selector:
    app: foostest-results-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foostest-results-app
spec:
  selector:
    app: foostest-results-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: foostestbot-phpmyadmin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.254.9
  selector:
    app: foostestbot-phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foostestbot-mariadb
spec:
  selector:
    app: foostestbot-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: foostestbot-redis
spec:
  selector:
    app: foostestbot-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
